[package]
name = "liro"
version = "0.6.1"
authors = ["Sebastian Lauwers <sl@mailicio.us"]
edition = "2018"

[dependencies]
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
thiserror = "1.0"

rand = "0.8"
pkce = "0.1"

chrono = "0.4"
regex = "1.5"
lazy_static = "1.4"
strum = "0.21"
strum_macros = "0.21"

mobc = "0.7"
mobc-redis = "0.7"

warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
askama = "0.10"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "utils", "framework", "standard_framework"]

[dependencies.tokio]
version = "1.10"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "deflate", "json"]

[dev-dependencies]
serial_test = "0.5"
