[package]
name = "liro"
version = "0.10.0"
authors = ["Sebastian Lauwers <sl@mailicio.us"]
edition = "2021"

[dependencies]
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
thiserror = "1.0"

rand = "0.8"
pkce = "0.1"

regex = "1.5"
lazy_static = "1.4"
strum = "0.23"
strum_macros = "0.23"

mobc = "0.7"
mobc-redis = "0.7"

warp = "0.3"
askama = "0.10"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "utils", "framework", "standard_framework", "unstable_discord_api"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "deflate", "json"]

[dev-dependencies]
serial_test = "0.5"
